Changes between ecm-5.0 and ecm-5.0.1:

- fixed bug when B1 or B2min is too large, and an overflow occurs in step 2,
	making the computations incorrect. The new limit for B1 or B2min is
	now around 2^53, and an error occurs when this limit is passed.
- fixed problem with save lines incorrectly written when both sigma and A
	are given with -save.
- fixed efficiency problem with -pm1: for B1 > 1e6, use -redc or -mpz_mod
	by default.