@@ -30,7 +30,7 @@ PP1="$1 -pp1"
    (echo "############### ERROR ###############"; exit 1) || exit
 
 # try primes < d in stage 2
-(echo 2050449218179969792522461197 | ./ecm -pp1 -x0 3 -k 1 20 0-1e6)||
+(echo 2050449218179969792522461197 | $PP1 -x0 3 -k 1 20 0-1e6)||
     (echo "############### ERROR ###############"; exit 1) || exit
 
 (echo 6215074747201 | $PP1 -x0 5 630 199729)||
